--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A description of your package",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
+  "unpkg": "dist/index.umd.js",
   "types": "dist/index.d.ts",
   "type": "module",
   "scripts": {
