--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "scripts": {
     "dev": "vite",
     "preview": "vite preview",
-    "build": "vite build --config vite.umd.config.ts"
+    "build:umd": "vite build --config vite.umd.config.ts",
+    "build:esm": "vite build --config vite.esm.config.ts --emptyOutDir false",
+    "build": "npm run build:umd && npm run build:esm"
   },
   "dependencies": {
     "vue": "^3.5.13"
