feat: @ruxuwu/example 依赖 @ruxuwu/jin

--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -13,6 +13,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ruxuwu/jin": "workspace:*",
     "vue": "^3.5.13"
   },
   "devDependencies": {
