--- a/packages/jin/package.json
+++ b/packages/jin/package.json
@@ -3,17 +3,15 @@
   "version": "0.1.2",
   "type": "module",
   "description": "A description of your package",
-  "main": "dist/index.cjs.js",
   "module": "dist/index.es.js",
   "unpkg": "dist/index.iife.js",
   "types": "types/index.d.ts",
   "private": true,
   "scripts": {
     "build:iife": "vite build --config vite.iife.config.ts",
-    "build:cjs": "vite build --config vite.cjs.config.ts --emptyOutDir false",
     "build:esm": "vite build --config vite.esm.config.ts --emptyOutDir false",
     "build:types": "tsc --project tsconfig.json",
-    "build": "npm run build:types && npm run build:iife && npm run build:cjs && npm run build:esm"
+    "build": "npm run build:types && npm run build:iife && npm run build:esm"
   },
   "dependencies": {
     "vue": "^3.5.13"
