--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -16,20 +16,27 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '18' # 或者你需要的 Node.js 版本
+          node-version: '20' # 或者你需要的 Node.js 版本
 
       - name: Install dependencies
-        run: npm install
+        run: |
+          cd packages/jin
+          npm install
 
       - name: Build project
-        run: npm run build
+        run: |
+          cd packages/jin
+          npm run build
 
       - name: Configure npm
         run: |
+          cd packages/jin
           echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > .npmrc
           echo "@ruxuwu:registry=https://registry.npmjs.org/" >> .npmrc
 
       - name: Publish to npm
-        run: npm publish --access public
+        run: |
+          cd packages/jin
+          npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
