--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -19,14 +19,15 @@ jobs:
           node-version: '18' # 或者你需要的 Node.js 版本
 
       - name: Install dependencies
-        run: pnpm install
+        run: |
+          cd packages/jin
+          npm install
 
       - name: Build project
-        run: pnpm -F @ruxuwu/jin run build
+        run: npm run build
 
       - name: Configure npm
         run: |
-          cd packages/jin
           echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > .npmrc
           echo "@ruxuwu:registry=https://registry.npmjs.org/" >> .npmrc
 
