--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -18,25 +18,13 @@ jobs:
         with:
           node-version: '20' # 或者你需要的 Node.js 版本
 
-      - name: Install dependencies
+      - name: Run build script
         run: |
-          cd packages/jin
           npm install
-
-      - name: Build project
-        run: |
-          cd packages/jin
           npm run build
-
-      - name: Configure npm
-        run: |
-          cd packages/jin
           echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > .npmrc
           echo "@ruxuwu:registry=https://registry.npmjs.org/" >> .npmrc
-
-      - name: Publish to npm
-        run: |
-          cd packages/jin
           npm publish --access public
+        working-directory: packages/jin
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
