--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "@ruxuwu/jin": "workspace:*",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
