--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@ruxuwu/jin": "workspace:*",
+    "@ruxuwu-plugins/hello-world-plugin": "workspace:*",
     "vue": "^3.5.13",
     "vue-router": "4"
   },
