--- a/plugins/hello-world-plugin/package.json
+++ b/plugins/hello-world-plugin/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "dev": "rollup -c -w",
     "build": "rollup -c",
-    "clean": "rimraf dist"
+    "clean": "rimraf dist",
+    "serve": "http-server dist -p 3000 --cors -c-1"
   },
   "keywords": [
     "plugin",
@@ -21,6 +22,7 @@
     "@rollup/plugin-commonjs": "^25.0.0",
     "@rollup/plugin-node-resolve": "^15.0.0",
     "@rollup/plugin-typescript": "^11.0.0",
+    "http-server": "^14.1.1",
     "rimraf": "^5.0.0",
     "rollup": "^4.0.0",
     "typescript": "~5.7.2",
