--- a/packages/jin/package.json
+++ b/packages/jin/package.json
@@ -10,7 +10,9 @@
     "build:iife": "vite build --config vite.iife.config.ts",
     "build:esm": "vite build --config vite.esm.config.ts --emptyOutDir false",
     "build:types": "tsc --project tsconfig.json",
-    "build": "npm run build:types && npm run build:iife && npm run build:esm"
+    "build": "npm run build:types && npm run build:iife && npm run build:esm",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "dependencies": {
     "vue": "^3.5.13"
@@ -22,7 +24,10 @@
     "semantic-release": "^24.2.3",
     "typescript": "~5.7.2",
     "vite": "^6.2.0",
-    "vue-tsc": "^2.2.4"
+    "vue-tsc": "^2.2.4",
+    "vitest": "^0.34.6",
+    "jsdom": "^22.1.0",
+    "@vitest/coverage-v8": "^0.34.6"
   },
   "files": [
     "dist"
