feat(@ruxuwu-plugins/hello-world-plugin): 更新开发环境

--- a/plugins/hello-world-plugin/package.json
+++ b/plugins/hello-world-plugin/package.json
@@ -9,7 +9,7 @@
     "dev": "rollup -c -w",
     "build": "rollup -c",
     "clean": "rimraf dist",
-    "serve": "http-server dist -p 3000 --cors -c-1"
+    "serve": "concurrently \"rollup -c -w\" \"http-server dist -p 3000 --cors -c-1\""
   },
   "keywords": [
     "plugin",
@@ -22,6 +22,7 @@
     "@rollup/plugin-commonjs": "^25.0.0",
     "@rollup/plugin-node-resolve": "^15.0.0",
     "@rollup/plugin-typescript": "^11.0.0",
+    "concurrently": "^8.2.0",
     "http-server": "^14.1.1",
     "rimraf": "^5.0.0",
     "rollup": "^4.0.0",
@@ -31,4 +32,4 @@
   "peerDependencies": {
     "@ruxuwu/jin": "workspace:*"
   }
-} 
+}
