--- a/packages/jin/package.json
+++ b/packages/jin/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ruxuwu/jin",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "type": "module",
   "description": "A description of your package",
   "module": "dist/index.es.js",
@@ -30,7 +30,8 @@
     "@vitest/coverage-v8": "^0.34.6"
   },
   "files": [
-    "dist"
+    "dist",
+    "types"
   ],
   "repository": {
     "type": "git",
