--- a/packages/jin/package.json
+++ b/packages/jin/package.json
@@ -12,7 +12,8 @@
     "build:types": "tsc --project tsconfig.json",
     "build": "npm run build:types && npm run build:iife && npm run build:esm",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "serve": "concurrently \"vite build --config vite.iife.config.ts\" \"http-server dist -p 4000 --cors -c-1\""
   },
   "dependencies": {
     "vue": "^3.5.13"
